improved error handling when no yelp results

--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
 
     <div id="errorModal" class="shadow1">
         <div class="searchBoxError">
-            <p>No concerts found...
-                <img src="images/tumble.gif" alt="tumbleweed">
-            </p>
+            <p class = 'error-text'>...</p>  
         </div>
     </div>
 </body>
