--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <input id="city" type="text" placeholder="Enter a City">
                     </div>
                     <div class="genre">
-                        Select a Music Genre
+                        Select a Genre
                         <select id="genre">
                             <option value="rock">Rock</option>
                             <option value="pop">Pop</option>
