added favicon and input labels

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jacob Taylor">
 
+    <link href="images/concerticon.ico" rel="icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
@@ -31,12 +32,12 @@
                 </div>
                 <div class="inputs">
                     <div class="city">
-                        Enter a City
-                        <input id="city" type="text" placeholder="Enter a City" label = "Enter City">
+                        <label>Enter a City</label>
+                        <input id="city" type="text" placeholder="Enter a City">
                     </div>
                     <div class="genre">
-                        Select a Genre
-                        <select id="genre" label ="Select Genre">
+                        <label>Select a Genre</label>
+                        <select id="genre">
                             <option value="rock">Rock</option>
                             <option value="pop">Pop</option>
                             <option value="country">Country</option>
