--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
                 </div>
                 <div class="inputs">
                     <div class="city">
-                        <label>Enter a City</label>
-                        <input id="city" type="text" placeholder="Enter a City">
+                        <label>Enter a City
+                            <input id="city" type="text" placeholder="Enter a City">
+                        </label>    
                     </div>
                     <div class="genre">
-                        <label>Select a Genre</label>
-                        <select id="genre">
-                            <option value="rock">Rock</option>
-                            <option value="pop">Pop</option>
-                            <option value="country">Country</option>
-                            <option value="rap">Rap</option>
-                        </select>
+                        <label>Select a Genre
+                            <select id="genre">
+                                <option value="rock">Rock</option>
+                                <option value="pop">Pop</option>
+                                <option value="country">Country</option>
+                                <option value="rap">Rap</option>
+                            </select>
+                        </label>
                     </div>
                     <button type="button pointer" id="searchGenre">FIND CONCERTS</button>
                 </div>
