added history api routing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <form onsubmit="handleSearchClick()">
                     <div class="inputs">
                         <div class="city">
-                            <input placeholder="Enter a City" type="text" >  
+                            <input id = "city" placeholder="Enter a City" type="text" >  
                         </div>
                         <div class="genre">
                             <select id="genre">
