--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 </div>
                 <div class="btn-div">
-                    <button class="reset">RESET SEARCH</button>
+                    <button class="reset historyback">RESET SEARCH</button>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
                             <button class="results">BACK TO SEARCH RESULTS</button>
                         </div>
                         <div class="right-btn">
-                            <button class="reset">RESET SEARCH</button>
+                            <button class="reset resetlater">RESET SEARCH</button>
                         </div>
                     </div>
                 </div>
